// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`could be disabled 1`] = `
<button type="button" class="c-button" disabled="disabled">
  <!----><span>My Button</span></button>
`;

exports[`should emit event when clicked 1`] = `
<button type="button" class="c-button">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 1`] = `
<button type="button" class="c-button c-button--round">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 2`] = `
<button type="button" class="c-button c-button--outline">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 3`] = `
<button type="button" class="c-button c-button--flat">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 4`] = `
<button type="button" class="c-button c-button--primary c-button--round">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 5`] = `
<button type="button" class="c-button c-button--primary c-button--outline">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 6`] = `
<button type="button" class="c-button c-button--primary c-button--flat">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 7`] = `
<button type="button" class="c-button c-button--success c-button--round">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 8`] = `
<button type="button" class="c-button c-button--success c-button--outline">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 9`] = `
<button type="button" class="c-button c-button--success c-button--flat">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 10`] = `
<button type="button" class="c-button c-button--warning c-button--round">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 11`] = `
<button type="button" class="c-button c-button--warning c-button--outline">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 12`] = `
<button type="button" class="c-button c-button--warning c-button--flat">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 13`] = `
<button type="button" class="c-button c-button--danger c-button--round">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 14`] = `
<button type="button" class="c-button c-button--danger c-button--outline">
  <!----><span>My Button</span></button>
`;

exports[`should works with different themes and flavors 15`] = `
<button type="button" class="c-button c-button--danger c-button--flat">
  <!----><span>My Button</span></button>
`;

exports[`should works with feather icon 1`] = `
<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send" style="vertical-align: middle;">
  <line x1="22" y1="2" x2="11" y2="13"></line>
  <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
</svg>
`;

exports[`should works with feather icon 2`] = `<button type="button" class="c-button"><span class="c-icon">​<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send" style="vertical-align: middle;"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg></span><span>My Button</span></button>`;
